add missing item ids

--- a/src/main/resources/mc-item-ids.properties
+++ b/src/main/resources/mc-item-ids.properties
@@ -801,3 +801,18 @@ minecraft.tropical_fish                      = 3riKettng
 minecraft.wheat_seeds                        = WjmFeptnR
 minecraft.white_dye                          = vjiK6pp7R
 minecraft.yellow_dye                         = 2CmFetpng
+minecraft.music_disc_13                      = 18xMw==12
+minecraft.music_disc_cat                     = 19jYXQ=as
+minecraft.music_disc_blocks                  = ibG9ja3M=
+minecraft.music_disc_chirp                   = jaGlycA==
+minecraft.music_disc_far                     = 19mYXI=5d
+minecraft.music_disc_mall                    = 19tYWxs5e
+minecraft.music_disc_mellohi                 = 19tZWxsb2
+minecraft.music_disc_stal                    = 19zdGFs1=
+minecraft.music_disc_strad                   = 19zdHJhZA
+minecraft.music_disc_ward                    = 193YXJk02
+minecraft.music_disc_11                      = 18xMQas==
+minecraft.music_disc_wait                    = 193YWl0==
+minecraft.music_disc_pigstep                 = waWdzdGVw
+minecraft.music_disc_otherside               = vdhlcnpG=
+minecraft.grass_block                        = NYmxvY2s=
