add items from 1.19

--- a/src/main/resources/mc-item-ids.properties
+++ b/src/main/resources/mc-item-ids.properties
@@ -816,3 +816,37 @@ minecraft.music_disc_wait                    = 193YWl0==
 minecraft.music_disc_pigstep                 = waWdzdGVw
 minecraft.music_disc_otherside               = vdhlcnpG=
 minecraft.grass_block                        = NYmxvY2s=
+minecraft.pearlescent_froglight              = YxpSZ0BII
+minecraft.verdant_froglight                  = 8DunITu4n
+minecraft.ochre_froglight                    = jh01yKH6z
+minecraft.frogspawn                          = AsA1_-36x
+minecraft.mangrove_button                    = _yxm7Ft9J
+minecraft.mangrove_door                      = 4mQZ7AMVL
+minecraft.mangrove_fence                     = rJAQSTTdK
+minecraft.mangrove_fence_gate                = TpTpI4YJX
+minecraft.mangrove_leaves                    = hAC44ypck
+minecraft.mangrove_log                       = xlrxiUjuc
+minecraft.mangrove_planks                    = hQgoBv7XJ
+minecraft.mangrove_pressure_plate            = Wh_cgMJ6a
+minecraft.mangrove_propagule                 = a8Jl3eXsz
+minecraft.mangrove_roots                     = DThWcStoX
+minecraft.mangrove_sign                      = EGQViT3lH
+minecraft.mangrove_slab                      = EykyxOvIN
+minecraft.mangrove_stairs                    = kKCRJO_ug
+minecraft.mangrove_trapdoor                  = mYl-gWYvt
+minecraft.mangrove_wood                      = 0qE99FYL4
+minecraft.mud                                = RMCC_pgl_
+minecraft.mud_brick_slab                     = 0awF7Egiz
+minecraft.mud_brick_stairs                   = F7L5k5IWv
+minecraft.mud_brick_wall                     = Emp9Nf29f
+minecraft.mud_bricks                         = VSIcgicSO
+minecraft.muddy_mangrove_roots               = 26nLTJ4ov
+minecraft.packed_mud                         = kpLp_1Jc0
+minecraft.reinforced_deepslate               = rMPb-sexP
+minecraft.sculk                              = iu3Xbltrr
+minecraft.sculk_catalyst                     = 8fRn7ZSLx
+minecraft.sculk_shrieker                     = hMLF2_Yn0
+minecraft.sculk_vein                         = 0a1x7Asyv
+minecraft.recovery_compass                   = kK5u3EKy8
+minecraft.music_disc_5                       = UGTvI3kRH
+minecraft.echo_shard                         = kC73DAMST
