--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: block-compression
-version: 1.10.1
+version: 2.0.0-SNAPSHOT
 author: Elizabeth Harper <foxcapades.io@gmail.com>
 main: io.foxcapades.spigot.block.compression.BlockCompressionPlugin
 website: https://github.com/Foxcapades/Spigot-Compression-Plugin
