--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -1,26 +1,34 @@
-# Configures whether/how players can open the compression workbench by
-# interacting with a block, while optionally holding a "key" item to enable the
-# interaction.
-#
-# For example, if set to `target: minecraft:fletching_table` and
-# `holding: minecraft:diamond` then players with the correct permissions will be
-# able to open the crafting workbench by right clicking a diamond against a
-# fletching table.
-open-on-interact:
-  # Whether opening the crafting workbench by interacting with a block is
-  # enabled.
-  #
-  # Values: true|false
-  enabled: true
-  # ID of the target block that must be interacted with (right clicked on) to
-  # open the crafting workbench.
-  #
-  # Values: <any valid block id>
-  target:  minecraft:fletching_table
-  # ID of the item that must be held by the player when interacting with
-  # (right clicking) the target block.
-  #
-  # To disable an item requirement, set to `minecraft:air`.
-  #
-  # Values: <any valid item id>
-  holding: minecraft:diamond
+# Plugin version, used internally to determine if the config needs to be
+# updated.
+version: 2.0.0
+
+# Sets whether trace/debug logging should be enabled.
+trace-logging: false
+
+# Defines recipes for the block compression plugin.
+recipes:
+
+  # Zip tool creation recipe.
+  zip-tool:
+
+    # Inputs needed for crafting the item.
+    #
+    # Each item must have a 1-letter key which is used in the 'layout' value to
+    # represent the ingredient (or empty slot) in the recipe.
+    items:
+      # Empty slots may be represented as a YAML null value or 'minecraft:air'.
+      N: null
+      # For non-empty slots, use the identifier for the ingredient item.
+      I: minecraft:iron_ingot
+
+    # Layout of the items in the crafting grid using the identifier letters
+    # defined in the 'items' object above.
+    #
+    # This value must contain exactly 9 non-space characters that each
+    # correspond to a key in the 'items' block above.
+    #
+    # Space characters and newlines are ignored.
+    layout: >-
+      III
+      IAA
+      III
